[gd_scene load_steps=12 format=3 uid="uid://ckyeh1q7j8dwb"]

[ext_resource type="Texture2D" uid="uid://dehxb5i1jnwy2" path="res://assets/textures/Crystal5.png" id="1_6225p"]
[ext_resource type="FontFile" uid="uid://b00ow0mbvbjld" path="res://assets/fonts/mandrill.ttf" id="1_7605a"]
[ext_resource type="Script" path="res://src/ui/hud.gd" id="1_yfqtj"]
[ext_resource type="Texture2D" uid="uid://cy5touamoun4h" path="res://assets/textures/Scroll.png" id="3_ygq8p"]

[sub_resource type="LabelSettings" id="LabelSettings_hlclp"]
font = ExtResource("1_7605a")
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_0neic"]
font = ExtResource("1_7605a")
font_size = 28

[sub_resource type="Animation" id="Animation_1fwki"]
resource_name = "key_change"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxKey/LabelKey:label_settings:font_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [28, 34, 28]
}

[sub_resource type="Animation" id="Animation_ms2gd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxKey/LabelKey:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BoxScroll/LabelScroll:label_settings:font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [28]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BoxScroll/LabelScroll:label_settings:font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fcqyg"]
resource_name = "scroll_change"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxScroll/LabelScroll:label_settings:font_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [28, 34, 28]
}

[sub_resource type="Animation" id="Animation_vr4p0"]
resource_name = "scroll_change_fail"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxScroll/LabelScroll:label_settings:font_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [28, 34, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BoxScroll/LabelScroll:label_settings:font_color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.960784, 0.12549, 0.12549, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4lvyj"]
_data = {
"RESET": SubResource("Animation_ms2gd"),
"key_change": SubResource("Animation_1fwki"),
"scroll_change": SubResource("Animation_fcqyg"),
"scroll_change_fail": SubResource("Animation_vr4p0")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yfqtj")

[node name="BoxKey" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_top = 4.0
offset_right = 51.0
offset_bottom = 36.0
grow_horizontal = 2
alignment = 1

[node name="Icon" type="TextureRect" parent="BoxKey"]
custom_minimum_size = Vector2i(30, 32)
offset_left = 6.0
offset_right = 36.0
offset_bottom = 32.0
size_flags_vertical = 4
texture = ExtResource("1_6225p")
ignore_texture_size = true

[node name="LabelKey" type="Label" parent="BoxKey"]
offset_left = 40.0
offset_right = 95.0
offset_bottom = 32.0
grow_horizontal = 2
text = "- / -"
label_settings = SubResource("LabelSettings_hlclp")

[node name="BoxScroll" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -38.0
offset_right = 53.0
offset_bottom = -6.0
grow_vertical = 0
alignment = 1

[node name="Icon" type="TextureRect" parent="BoxScroll"]
custom_minimum_size = Vector2i(30, 32)
offset_right = 30.0
offset_bottom = 32.0
size_flags_vertical = 4
texture = ExtResource("3_ygq8p")
ignore_texture_size = true

[node name="LabelScroll" type="Label" parent="BoxScroll"]
offset_left = 34.0
offset_right = 45.0
offset_bottom = 32.0
grow_horizontal = 2
text = "-"
label_settings = SubResource("LabelSettings_0neic")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4lvyj")
}
